hphp/hack/test/typecheck/defined/single_const_attribute_class.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

<<__Const>> class A {}
